vault sync: 2026-01-24 18:08 | mac | 1 files
Affected files:
JavaNotes/sky-take-out/新增员工.md

--- a/JavaNotes/sky-take-out/新增员工.md
+++ b/JavaNotes/sky-take-out/新增员工.md
@@ -49,3 +49,64 @@
 | username | string  | 必须   |     | 用户名  |              |
 当前端提交的数据和实体类中对应的属性差别比较大时 建议使用DTO来封装数据
 
+## `EmployeeController`
+
+```java
+/**  
+ * 新增员工  
+ * @param employeeDTO  
+ * @return  
+ */  
+@ApiOperation("新增员工")
+@PostMapping  
+public Result save(@RequestBody EmployeeDTO employeeDTO) {  
+    log.info("新增员工:{}",employeeDTO);  
+    employeeService.save(employeeDTO);  
+    return null;  
+}
+```
+
+## `EmployeeService`
+
+```java
+/**  
+ * 新增员工  
+ * @param employeeDTO  
+ */  
+void save(EmployeeDTO employeeDTO);
+```
+
+## `EmployeeServiceImpl`
+
+```java
+/**  
+ * 新增员工  
+ * @param employeeDTO  
+ */  
+public void save(EmployeeDTO employeeDTO) {  
+    Employee employee = new Employee();  
+  
+    // 对象属性拷贝 （属性名一致就可以对拷）  
+    BeanUtils.copyProperties(employeeDTO, employee);  
+  
+    // 设置账号的状态 默认正常状态 1表示正常 0 表示锁定  
+    employee.setStatus(StatusConstant.ENABLE);  
+  
+    // 设置密码 默认密码123456  
+    employee.setPassword(DigestUtils.md5DigestAsHex(PasswordConstant.DEFAULT_PASSWORD.getBytes()));  
+  
+    // 设置当前记录的创建时间和修改时间  
+    employee.setCreateTime(LocalDateTime.now());  
+    employee.setUpdateTime(LocalDateTime.now());  
+  
+    // 设置当前记录创建人id和修改人id  
+    // TODO 后期需要改为当前登录用户的id  
+    employee.setCreateUser(10L);  
+    employee.setUpdateUser(10L);  
+  
+    employeeMapper.insert(employee);  
+}
+```
+
+# 功能测试
+由于开发阶段前段和后端是并行开发的 后端完成某个功能后 此时前段对应的功能可能还没有开发完成 导致无法进行前后端联调测试 所以在开发阶段 后端测试主要以接口文档测试为主
