--- a/JavaNotes/sky-take-out/新增员工.md
+++ b/JavaNotes/sky-take-out/新增员工.md
@@ -62,7 +62,7 @@
 public Result save(@RequestBody EmployeeDTO employeeDTO) {  
     log.info("新增员工:{}",employeeDTO);  
     employeeService.save(employeeDTO);  
-    return null;  
+    return Result.success();  
 }
 ```
 
@@ -108,5 +108,25 @@ public void save(EmployeeDTO employeeDTO) {
 }
 ```
 
+## `EmployeeMapper`
+
+```java
+/**  
+ * 插入员工数据  
+ * @param employee  
+ */  
+@Insert("insert into employee (name, username, password, phone, sex, id_number,create_time, update_time, create_user, update_user, status)" +  
+        "values" +  
+        "(#{name}, #{username}, #{password}, #{phone}, #{sex}, #{idNumber},#{createTime}, #{updateTime}, #{createUser}, #{updateUser},#{status})")  
+void insert(Employee employee);
+```
+
 # 功能测试
 由于开发阶段前段和后端是并行开发的 后端完成某个功能后 此时前段对应的功能可能还没有开发完成 导致无法进行前后端联调测试 所以在开发阶段 后端测试主要以接口文档测试为主
+- Swagger测试
+- 前后端联调测试
+
+## 代码完善
+程序存在的问题
+- 录入的用户名已存在 抛出异常后没有处理
+- 新增员工时 创建人id和修改人id设置了固定值
