--- a/JavaNotes/sky-take-out/新增员工.md
+++ b/JavaNotes/sky-take-out/新增员工.md
@@ -48,6 +48,24 @@
 | sex      | string  | 必须   |     | 性别   |              |
 | username | string  | 必须   |     | 用户名  |              |
 当前端提交的数据和实体类中对应的属性差别比较大时 建议使用DTO来封装数据
+```java
+@Data  
+public class EmployeeDTO implements Serializable {  
+  
+    private Long id;  
+  
+    private String username;  
+  
+    private String name;  
+  
+    private String phone;  
+  
+    private String sex;  
+  
+    private String idNumber;  
+  
+}
+```
 
 ## `EmployeeController`
 
@@ -129,4 +147,65 @@ void insert(Employee employee);
 ## 代码完善
 程序存在的问题
 - 录入的用户名已存在 抛出异常后没有处理
+	- 通过全局异常管理器控制
+```java
+/**  
+ *  处理SQL异常  
+ * @param ex  
+ * @return  
+ */  
+@ExceptionHandler  
+public  Result exceptionHandler(SQLIntegrityConstraintViolationException ex){  
+    //Duplicate entry 'zhangsan' for key 'employee.idx_username'  
+    String message = ex.getMessage();  
+    if (message.contains("Duplicate entry")){  
+        String[] split = message.split(" ");  
+        String username = split[2];  
+        String msg = username + MessageConstant.ALREADY_EXISTS;  
+        return Result.error(msg);  
+    }else{  
+        return Result.error(MessageConstant.UNKNOWN_ERROR);  
+    }  
+}
+```
 - 新增员工时 创建人id和修改人id设置了固定值
+		后续请求中前端会携带JWT令牌 通过JWT令牌可以解析出当前登录员工id
+	- ThreadLocal 并不是一个Thread 而是 Thread的局部变量 他为每个线程提供单独一份存储空间 具有线程隔离的效果 只有在线程内才能获取到对应的值 线程外则不能访问
+	`EmployeeServiceImpl`
+	```java
+	// 设置当前记录创建人id和修改人id  
+employee.setCreateUser(BaseContext.getCurrentId());  
+employee.setUpdateUser(BaseContext.getCurrentId());
+	```
+	`JwtTokenAdminInterceptor`
+		存入ThreadLocal
+	```java
+	public boolean preHandle(HttpServletRequest request, HttpServletResponse response, Object handler) throws Exception {  
+    //判断当前拦截到的是Controller的方法还是其他资源  
+    if (!(handler instanceof HandlerMethod)) {  
+        //当前拦截到的不是动态方法，直接放行  
+        return true;  
+    }  
+  
+    //1、从请求头中获取令牌  
+    String token = request.getHeader(jwtProperties.getAdminTokenName());  
+  
+    //2、校验令牌  
+    try {  
+        log.info("jwt校验:{}", token);  
+        Claims claims = JwtUtil.parseJWT(jwtProperties.getAdminSecretKey(), token);  
+        Long empId = Long.valueOf(claims.get(JwtClaimsConstant.EMP_ID).toString());  
+        log.info("当前员工id：", empId);  
+        BaseContext.setCurrentId(empId);  
+  
+        //3、通过，放行  
+        return true;  
+    } catch (Exception ex) {  
+        //4、不通过，响应401状态码  
+        response.setStatus(401);  
+        return false;  
+    }  
+}
+	```
+关键步骤
+       ` BaseContext.setCurrentId(empId);`  
