vault sync: 2026-01-26 15:08 | mac | 1 files
Affected files:
JavaNotes/sky-take-out/员工分页查询.md

--- a/JavaNotes/sky-take-out/员工分页查询.md
+++ b/JavaNotes/sky-take-out/员工分页查询.md
@@ -134,9 +134,10 @@ public PageResult pageQuery(EmployeePageQueryDTO employeePageQueryDTO) {
 }
 ```
 你只需要关注业务数据的筛选，完全不用写 `LIMIT` 或 `OFFSET`，也不用手动写 count 查询。
-PageHelper 帮你做的事 (拦截与修改): 当代码运行到 employeeMapper.pageQuery 时，PageHelper 会作为 MyBatis 的插件介入。它检测到之前调用过 startPage，于是会做两件事：
+PageHelper 帮你做的事 (拦截与修改): 当代码运行到 employeeMapper.pageQuery 时，PageHelper 会作为 MyBatis的插件介入。它检测到之前调用过 startPage，于是会做两件事：
 自动修改 SQL: 它会在你的 SQL 后面自动追加数据库对应的分页语句（例如 MySQL 的 LIMIT 0, 10）。
-自动 Count: 它会基于你的 SQL 自动生成一条 SELECT COUNT(*) 语句并执行，用来计算总记录数 total。
+自动 Count: 它会基于你的 SQL 自动生成一条 `SELECT COUNT(*)`语句并执行，用来计算总记录数 total。
+
 ## `EmployeeMapper`
 
 ```java
