--- a/JavaNotes/sky-take-out/员工分页查询.md
+++ b/JavaNotes/sky-take-out/员工分页查询.md
@@ -168,3 +168,16 @@ Page<Employee> pageQuery(EmployeePageQueryDTO employeePageQueryDTO);
 
 # 功能测试
  前后端联调 + Swagger 测试
+# 代码完善
+后端响应回前端的时间数据格式有问题 （修改时间）
+
+## 解决方式
+- 方式一： 在Employee 实体类属性上加入注解 对日期进行格式化
+	```java
+	@JsonFormat(pattern = "yyyy-MM-dd HH:mm:ss")  
+	private LocalDateTime createTime;  
+  
+	@JsonFormat(pattern = "yyyy-MM-dd HH:mm:ss")  
+	private LocalDateTime updateTime;
+	```
+- 方式二： 在`WebMvcConfiguration` 中扩展 Spring MVC的消息转换器 统一对日期类型进行格式化处理
