--- a/JavaNotes/sky-take-out/员工分页查询.md
+++ b/JavaNotes/sky-take-out/员工分页查询.md
@@ -181,3 +181,67 @@ Page<Employee> pageQuery(EmployeePageQueryDTO employeePageQueryDTO);
 	private LocalDateTime updateTime;
 	```
 - 方式二： 在`WebMvcConfiguration` 中扩展 Spring MVC的消息转换器 统一对日期类型进行格式化处理
+	前置对象转换器
+```java
+/**  
+ * 对象映射器:基于jackson将Java对象转为json，或者将json转为Java对象  
+ * 将JSON解析为Java对象的过程称为 [从JSON反序列化Java对象]  
+ * 从Java对象生成JSON的过程称为 [序列化Java对象到JSON]  
+ */
+public class JacksonObjectMapper extends ObjectMapper {  
+  
+    public static final String DEFAULT_DATE_FORMAT = "yyyy-MM-dd";  
+    //public static final String DEFAULT_DATE_TIME_FORMAT = "yyyy-MM-dd HH:mm:ss";  
+    public static final String DEFAULT_DATE_TIME_FORMAT = "yyyy-MM-dd HH:mm";  
+    public static final String DEFAULT_TIME_FORMAT = "HH:mm:ss";  
+  
+    public JacksonObjectMapper() {  
+        super();  
+        //收到未知属性时不报异常  
+        this.configure(FAIL_ON_UNKNOWN_PROPERTIES, false);  
+  
+        //反序列化时，属性不存在的兼容处理  
+        this.getDeserializationConfig()
+		        .withoutFeatures(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES);  
+  
+        SimpleModule simpleModule = new SimpleModule()  
+                .addDeserializer(LocalDateTime.class, 
+new LocalDateTimeDeserializer(DateTimeFormatter.ofPattern(DEFAULT_DATE_TIME_FORMAT)))  
+                .addDeserializer(LocalDate.class, 
+new LocalDateDeserializer(DateTimeFormatter.ofPattern(DEFAULT_DATE_FORMAT)))  
+                .addDeserializer(LocalTime.class, 
+new LocalTimeDeserializer(DateTimeFormatter.ofPattern(DEFAULT_TIME_FORMAT)))  
+                .addSerializer(LocalDateTime.class, 
+new LocalDateTimeSerializer(DateTimeFormatter.ofPattern(DEFAULT_DATE_TIME_FORMAT)))  
+                .addSerializer(LocalDate.class, 
+new LocalDateSerializer(DateTimeFormatter.ofPattern(DEFAULT_DATE_FORMAT)))  
+                .addSerializer(LocalTime.class, 
+new LocalTimeSerializer(DateTimeFormatter.ofPattern(DEFAULT_TIME_FORMAT)));  
+  
+        //注册功能模块 例如，可以添加自定义序列化器和反序列化器  
+        this.registerModule(simpleModule);  
+    }  
+}
+```
+
+WebMvcConfiguration
+配置 扩展SpringMVC消息转换器
+```java
+/**  
+ * 扩展Spring MVC消息转换器  
+ * @param converters  
+ */  
+@Override  
+protected void extendMessageConverters(List<HttpMessageConverter<?>> converters) {  
+    log.info("扩展消息转换器...");  
+    // 创建一个消息转换器对象  
+    MappingJackson2HttpMessageConverter converter = new MappingJackson2HttpMessageConverter();  
+  
+    // 需要为转换器设置一个对象转换器 对象转换器可以将Java对象转换为json格式  
+    converter.setObjectMapper(new JacksonObjectMapper());  
+  
+    // 将上面的消息转换器对象追加到mvc框架的转换器集合中  
+    converters.add(0, converter);  
+  
+}
+```
