vault sync: 2026-01-26 16:47 | mac | 4 files
Affected files:
JavaNotes/sky-take-out/Content.md
JavaNotes/sky-take-out/启用禁用员工账号.md
JavaNotes/sky-take-out/员工分页查询.md
JavaNotes/sky-take-out/新增员工.md

--- a/JavaNotes/sky-take-out/新增员工.md
+++ b/JavaNotes/sky-take-out/新增员工.md
@@ -11,12 +11,13 @@
 	- Path: /admin/employee
 	- Method: POST
 > 注： /admin 用于区分资源请求源 如果管理端发出的请求 统一使用/admin作为前缀， 用户端发出的请求统一使用/user作为前缀
-- Headers
+- 接口参数
+	Headers
 
 | 参数名称         | 参数值              | 是否必须 | 示例  | 备注  |
 | ------------ | ---------------- | ---- | --- | --- |
 | Content-Type | application/json | 是    |     |     |
-- Body
+	Body
 
 | 名称       | 类型      | 是否必须 | 默认值 | 备注   | 其他信息         |
 | -------- | ------- | ---- | --- | ---- | ------------ |
