vault sync: 2026-01-26 17:32 | mac | 20 files
Affected files:
JavaNotes/sky-take-out/Content.md
JavaNotes/sky-take-out/启用禁用员工账号.md
JavaNotes/sky-take-out/员工分页查询.md
JavaNotes/sky-take-out/编辑员工.md
JavaNotes/unarchieved/苍穹外卖.md
copilot/copilot-custom-prompts/Clip Web Page.md
copilot/copilot-custom-prompts/Clip YouTube Transcript.md
copilot/copilot-custom-prompts/Emojify.md
copilot/copilot-custom-prompts/Explain like I am 5.md
copilot/copilot-custom-prompts/Fix grammar and spelling.md
copilot/copilot-custom-prompts/Generate glossary.md
copilot/copilot-custom-prompts/Generate table of contents.md
copilot/copilot-custom-prompts/Make longer.md
copilot/copilot-custom-prompts/Make shorter.md
copilot/copilot-custom-prompts/Remove URLs.md
copilot/copilot-custom-prompts/Rewrite as tweet thread.md
copilot/copilot-custom-prompts/Rewrite as tweet.md
copilot/copilot-custom-prompts/Simplify.md
copilot/copilot-custom-prompts/Summarize.md
copilot/copilot-custom-prompts/Translate to Chinese.md

--- a/JavaNotes/sky-take-out/员工分页查询.md
+++ b/JavaNotes/sky-take-out/员工分页查询.md
@@ -21,7 +21,7 @@
 | 名称              | 类型           | 是否必须 | 默认值 | 备注  | 其他信息           |
 | --------------- | ------------ | ---- | --- | --- | -------------- |
 | code            | number       | 必须   |     |     |                |
-| nsg             | null         | 非必须  |     |     |                |
+| msg             | null         | 非必须  |     |     |                |
 | data            | object       | 必须   |     |     |                |
 | ├─ total        | number       | 必须   |     |     |                |
 | ├─ records      | object[]     | 必须   |     |     | item类型； object |
