--- a/JavaNotes/sky-take-out/启用禁用员工账号.md
+++ b/JavaNotes/sky-take-out/启用禁用员工账号.md
@@ -32,6 +32,24 @@
 | data | string  | 非必须  |     |     |      |
 | msg  | string  | 非必须  |     |     |      |
 # 代码开发
+
+## EmployeeController
+```java
+/**  
+ * 启用禁用员工账号  
+ * @param status  
+ * @param id  
+ * @return  
+ */  
+@PostMapping("/status/{status}")  
+@ApiOperation("启用禁用员工账号")  
+public Result startOrStop(@PathVariable("status") Integer status, Long id) {  
+    log.info("启用禁用员工账号:{},{}",status,id);  
+    employeeService.startOrStop(status,id);  
+    return Result.success();  
+}
+```
+
 `@PathVariable (路径参数)`:
 用于获取 URL 路径中的变量。
 设计理念: 这里的 status 和 id 被视为资源本身的一部分。
@@ -42,3 +60,71 @@ URL 样式: /admin/employee/status/1/10 (假设路径映射是 /admin/employee/s
 设计理念: 这里的变量通常作为过滤条件或附加控制参数。
 URL 样式: /admin/employee/status?status=1&id=10。
 语义: "对员工状态资源进行操作，参数是 status=1 和 id=10"
+
+## `EmployeeService`
+
+```java
+/**  
+ * 启用或禁用员工账号  
+ * @param status  
+ * @param id  
+ */  
+void startOrStop(Integer status, Long id);
+```
+
+## `EmployeeServiceImpl`
+
+```java
+/**  
+ * 启用或禁用员工账号  
+ * @param status  
+ * @param id  
+ */  
+@Override  
+public void startOrStop(Integer status, Long id) {  
+    // update employee set status = ? where id = ?  
+    /*Employee employee = new Employee();    
+    employee.setId(id);    
+    employee.setStatus(status);*/  
+    
+    Employee employee = Employee.builder()  
+            .id(id)  
+            .status(status)  
+            .build();  
+  
+    employeeMapper.update(employee);  
+}
+```
+
+## `EmployeeMapper`
+
+```java
+/**  
+ * 根据逐渐动态修改属性  
+ * @param employee  
+ */  
+void update(Employee employee);
+```
+
+## `EmployeeMapper.xml`
+
+```xml
+    <update id="update" parameterType="Employee">  
+        update employee  
+        <set>  
+            <if test="name != null">name = #{name},</if>  
+            <if test="username != null">username = #{username},</if>  
+            <if test="password != null">password = #{password},</if>  
+            <if test="phone != null">phone = #{phone},</if>  
+            <if test="sex != null">sex = #{sex},</if>  
+            <if test="idNumber != null">id_Number = #{idNumber},</if>  
+            <if test="updateTime != null">update_Time = #{updateTime},</if>  
+            <if test="updateUser != null">update_User = #{updateUser},</if>  
+            <if test="status != null">status = #{status},</if>  
+        </set>  
+        where id = #{id}  
+    </update>  
+```
+
+# 功能测试
+前后端联调 + Swagger接口文档测试
