vault sync: 2026-01-27 12:52 | mac | 1 files
Affected files:
JavaNotes/sky-take-out/编辑员工.md

--- a/JavaNotes/sky-take-out/编辑员工.md
+++ b/JavaNotes/sky-take-out/编辑员工.md
@@ -67,4 +67,52 @@
 | data | object  | 非必必须 |     |     |              |
 | msg  | string  | 非必须  |     |     |              |
 
-# 代码开发
+# 代码开发 - 根据id查询员工信息
+## `EmployeeController`
+
+```java
+/**  
+ * 根据id查询员工信息  
+ * @param id  
+ * @return  
+ */  
+@GetMapping("/{id}")  
+@ApiOperation("根据id查询员工信息")  
+public Result<Employee> getById(@PathVariable Long id) {  
+    Employee employee = employeeService.getById(id);  
+    return Result.success(employee);  
+}
+```
+
+## `EmployeeService`
+
+```java
+/**  
+ * 根据id查询员工信息  
+ * @param id  
+ * @return  
+ */  
+Employee getById(Long id);
+```
+## `EmployeeServiceImpl`
+
+```java
+@Override  
+public Employee getById(Long id) {  
+    Employee employee = employeeMapper.getById(id);  
+    employee.setPassword("****");  
+    return employee;  
+}
+```
+
+## `EmployeeMapper`
+
+```java
+/**  
+ * 根据id查询员工信息  
+ * @param id  
+ * @return  
+ */  
+@Select("select * from employee where id = #{id}")  
+Employee getById(Long id);
+```
