vault sync: 2026-01-27 13:39 | mac | 1 files
Affected files:
JavaNotes/sky-take-out/编辑员工.md

--- a/JavaNotes/sky-take-out/编辑员工.md
+++ b/JavaNotes/sky-take-out/编辑员工.md
@@ -68,6 +68,29 @@
 | msg  | string  | 非必须  |     |     |              |
 
 # 代码开发 - 根据id查询员工信息
+
+>在使用 `Result<T>` 这种统一返回结果类时，是否加泛型主要取决于**该接口是否需要向前端返回具体的业务数据（Data）**。
+
+简单总结如下：
+
+1. 需要加泛型的情况 (`Result<T>`)
+**场景**：当接口的主要目的是**查询数据**或**获取资源**时。
+**原因**：前端需要解析 `data` 字段中的具体内容（是一个对象列表、还是一个用户信息的 JSON ），加上泛型可以让 Swagger 接口文档清晰地展示返回结构，同时也保证了类型安全。
+
+*   **你的代码示例：**
+    *   `login()`: 返回 `Result<EmployeeLoginVO>`。因为登录成功后，前端需要拿到 Token、ID 和用户名。
+    *   `page()`: 返回 `Result<PageResult>`。前端需要拿到分页列表数据和总记录数。
+    *   `getById()`: 返回 `Result<Employee>`。前端回显数据时需要具体的员工信息。
+
+2. 不需要加泛型的情况 (直接用 `Result`)
+**场景**：当接口的主要目的是**执行动作**（增、删、改），且只需要告诉前端“操作成功”还是“失败”时。
+**原因**：这些操作通常不需要返回额外的数据，只要 HTTP 状态码为 200 且业务 Code 为成功即可。此时 `data` 字段通常为 `null`。
+
+*   **你的代码示例：**
+    *   `save()` (新增): 只需要告知保存成功，由 `Result.success()` 返回即可。
+    *   `update()` (修改): 同上。
+    *   `startOrStop()` (状态及禁用): 同上。
+
 ## `EmployeeController`
 
 ```java
