vault sync: 2026-01-27 14:18 | mac | 2 files
Affected files:
JavaNotes/sky-take-out/分类模块功能.md
JavaNotes/sky-take-out/编辑员工.md

--- a/JavaNotes/sky-take-out/编辑员工.md
+++ b/JavaNotes/sky-take-out/编辑员工.md
@@ -139,3 +139,48 @@ public Employee getById(Long id) {
 @Select("select * from employee where id = #{id}")  
 Employee getById(Long id);
 ```
+# 代码开发 - 编辑员工信息
+## `EmployeeController`
+
+```java
+@PutMapping  
+@ApiOperation("修改员工信息")  
+public Result update(@RequestBody EmployeeDTO employeeDTO) {  
+    log.info("修改员工信息:{}",employeeDTO);  
+    employeeService.update(employeeDTO);  
+    return Result.success();  
+}
+```
+
+## `EmployeeService`
+
+```java
+/**  
+ * 修改员工信息  
+ * @param employeeDTO  
+ */  
+void update(EmployeeDTO employeeDTO);
+```
+
+## `EmployeeServiceImpl`
+
+```java
+/**  
+ * 修改员工信息  
+ * @param employeeDTO  
+ */  
+@Override  
+public void update(EmployeeDTO employeeDTO) {  
+    Employee employee = new Employee();  
+    BeanUtils.copyProperties(employeeDTO,employee);  
+  
+    employee.setUpdateTime(LocalDateTime.now());  
+    employee.setUpdateUser(BaseContext.getCurrentId());  
+  
+    employeeMapper.update(employee);  
+}
+```
+
+其中复用Mapper层中的 update
+# 功能测试
+ 前后端联调 + Swagger 测试
