--- a/JavaNotes/sky-take-out/公共字段自动填充.md
+++ b/JavaNotes/sky-take-out/公共字段自动填充.md
@@ -25,3 +25,137 @@ category.setUpdateUser(BaseContext.getCurrentId());
 - 自定义注解AutoFill 用于表示需要进行公共字段自动填充的方法
 - 自定义切面类AutoFillAspect 统一拦截加入AutoFill注解的方法 通过反射为公共字段赋值
 - 在Mapper的方法上加入AutoFill注解
+
+# 代码开发
+
+## `OperationType`
+
+```java
+/**  
+ * 数据库操作类型  
+ */  
+public enum OperationType {  
+  
+    /**  
+     * 更新操作  
+     */  
+    UPDATE,  
+  
+    /**  
+     * 插入操作  
+     */  
+    INSERT  
+  
+}
+```
+
+## `AutoFill`
+
+```java
+/**  
+ * 自动填充注解，用于表示某个方法需要进行功能字段自动填充处理  
+ */  
+@Target(ElementType.METHOD)  
+@Retention(RetentionPolicy.RUNTIME)  
+public @interface AutoFill {  
+    // 数据库操作类型：UPDATE INSERT  
+    OperationType value();  
+}
+```
+## `AutoFillAspect`
+
+```java
+package com.sky.aspect;   
+  
+/**  
+ * 自动填充切面  
+ */  
+@Aspect  
+@Component  
+@Slf4j  
+public class AutoFillAspect {  
+    /**  
+     * 切入点  
+     */  
+    @Pointcut("execution(* com.sky.mapper.*.*(..)) && @annotation(com.sky.annotation.AutoFill)")  
+    public void autoFillPointCut() {}  
+  
+    /**  
+     * 前置通知 在通知中进行公共字段赋值  
+     */  
+    @Before("autoFillPointCut()")  
+    public void autoFill(JoinPoint joinPoint) {  
+        log.info("开始进行公共字段自动填充...");  
+  
+        // 获取当前被拦截的方法上的数据库操作类型  
+        MethodSignature signature = (MethodSignature) joinPoint.getSignature(); //方法签名对象  
+        AutoFill autoFill = signature.getMethod().getAnnotation(AutoFill.class);//获得方法上的注解对象  
+        OperationType operationType = autoFill.value();  
+  
+        // 获取到当前被拦截的方法参数--实体对象  
+        Object[] args = joinPoint.getArgs();  
+        if (args == null || args.length == 0) {  
+           return;  
+        }  
+  
+        Object entity = args[0];//实体对象  
+        // 准备赋值的数据--当前时间、当前登录用户id  
+        LocalDateTime now = LocalDateTime.now();  
+        Long currentId = BaseContext.getCurrentId();  
+  
+        // 根据当前不同的操作类型 为对应的属性通过反射来赋值  
+        if(operationType == OperationType.INSERT){  
+            // 插入操作 为四个公共字段赋值  
+            try {  
+                Method setCreateTime = entity.getClass()
+                .getDeclaredMethod(AutoFillConstant.SET_CREATE_TIME, LocalDateTime.class);  
+                Method setCreateUser = entity.getClass()
+                .getDeclaredMethod(AutoFillConstant.SET_CREATE_USER,Long.class);  
+                Method setUpdateTime = entity.getClass()
+                .getDeclaredMethod(AutoFillConstant.SET_UPDATE_TIME, LocalDateTime.class);  
+                Method setUpdateUser = entity.getClass()
+                .getDeclaredMethod(AutoFillConstant.SET_UPDATE_USER, Long.class);  
+  
+                //通过反射为对象属性赋值  
+                setCreateTime.invoke(entity, now);  
+                setCreateUser.invoke(entity, currentId);  
+                setUpdateTime.invoke(entity, now);  
+                setUpdateUser.invoke(entity, currentId);  
+            } catch (Exception e) {  
+                e.printStackTrace();  
+            }  
+  
+        }else if(operationType == OperationType.UPDATE){  
+            // 修改操作 为两个公共字段赋值  
+            try {  
+                Method setUpdateTime = entity.getClass()
+                .getDeclaredMethod(AutoFillConstant.SET_UPDATE_TIME, LocalDateTime.class);  
+                Method setUpdateUser = entity.getClass()
+                .getDeclaredMethod(AutoFillConstant.SET_UPDATE_USER, Long.class);  
+  
+                //通过反射为对象属性赋值  
+                setUpdateTime.invoke(entity, now);  
+                setUpdateUser.invoke(entity, currentId);  
+            } catch (Exception e) {  
+                e.printStackTrace();  
+            }  
+        }  
+    }  
+}
+```
+ 反射 AOP
+## `CategoryMapper`
+
+```java
+@AutoFill(value = OperationType.INSERT)  
+@Insert("insert into category(type, name, sort, status, create_time, update_time, create_user, update_user)" +  
+        " VALUES" +  
+        " (#{type}, #{name}, #{sort}, #{status}, #{createTime}, #{updateTime}, #{createUser}, #{updateUser})")  
+void insert(Category category);
+```
+在需要使用的地方采用`@AutoFill` 注解指定 value 即操作的类型INSET/UPDATE
+
+对于原先开发的`ServiceImpl`部分 公共字段填充可以全部删除 功能保持一致
+
+# 功能测试
+ 前后端联调 + Swagger 测试
