vault sync: 2026-01-28 11:08 | mac | 1 files
Affected files:
JavaNotes/sky-take-out/菜品相关接口开发/新增菜品.md

--- a/JavaNotes/sky-take-out/菜品相关接口开发/新增菜品.md
+++ b/JavaNotes/sky-take-out/菜品相关接口开发/新增菜品.md
@@ -89,4 +89,56 @@ form-data 是浏览器文件上传的一种固定形式
 [[数据库设计文档#^0b4642|dish表]] 和 [[数据库设计文档#^a4b087| dish_flavor表]]
 # 代码开发-开发文件上传接口
 
-浏览器 $\rightarrow$ 后端服务$\rightarrow$ 阿里云OSS(这里不做oss开发 存储到本地)
+浏览器 $\rightarrow$ 后端服务$\rightarrow$ 阿里云OSS(这里暂时不做oss开发 存储到本地)
+
+```java
+@RestController  
+@RequestMapping("/admin/common")  
+@Api(tags = "通用接口")  
+@Slf4j  
+public class CommonController {  
+  
+    @PostMapping("/upload")  
+    @ApiOperation("文件上传")  
+    public Result<String> upload(MultipartFile file) {  
+        log.info("文件上传：{}", file);  
+  
+        try {  
+            // 1. 获取原始文件名 (例如: created_avatar.jpg)  
+            String originalFilename = file.getOriginalFilename();  
+  
+            // 2. 获取文件后缀 (例如: .jpg)  
+            // 健壮性处理：防止文件名为空  
+            String extension = originalFilename != null ?  
+                    originalFilename.substring(originalFilename.lastIndexOf(".")) : ".jpg";  
+  
+            // 3. 构造新文件名称，防止重名覆盖 (利用 UUID)            String newFileName = UUID.randomUUID().toString() + extension;  
+  
+            // 4. 指定本地保存的目录 (macOS 路径示例)  
+            // 注意：你可以改为你想要的任何路径，比如 System.getProperty("user.dir") + "/upload/"            String baseDir = "/Users/crzhu/Downloads/sky-images/";  
+            File dir = new File(baseDir);  
+  
+            // 如果目录不存在，则创建  
+            if (!dir.exists()) {  
+                dir.mkdirs();  
+            }  
+  
+            // 5. 将接收到的文件存储到本地  
+            // 拼接完整路径  
+            File targetFile = new File(baseDir + newFileName);  
+            file.transferTo(targetFile);  
+  
+            log.info("文件已保存至：{}", targetFile.getAbsolutePath());  
+  
+            // 6. 返回结果  
+            // 注意：这里暂时返回的是本地绝对路径 前端未实现图片回显  
+            // TODO 如果前端需要通过 http://localhost:8080/xx.jpg 访问图片，还需要在 Spring Boot 中配置静态资源映射 (ResourceHandler)。  
+            return Result.success(targetFile.getAbsolutePath());  
+  
+        } catch (IOException e) {  
+            log.error("文件上传失败", e);  
+            return Result.error(MessageConstant.UPLOAD_FAILED);  
+        }  
+    }  
+}
+```
