vault sync: 2026-01-28 13:54 | mac | 1 files
Affected files:
JavaNotes/sky-take-out/菜品相关接口开发/新增菜品.md

--- a/JavaNotes/sky-take-out/菜品相关接口开发/新增菜品.md
+++ b/JavaNotes/sky-take-out/菜品相关接口开发/新增菜品.md
@@ -87,7 +87,7 @@ form-data 是浏览器文件上传的一种固定形式
 ## 数据库设计
 
 [[数据库设计文档#^0b4642|dish表]] 和 [[数据库设计文档#^a4b087| dish_flavor表]]
-# 代码开发-开发文件上传接口
+# 代码开发-文件上传接口
 
 浏览器 $\rightarrow$ 后端服务$\rightarrow$ 阿里云OSS(这里暂时不做oss开发 存储到本地)
 
@@ -139,6 +139,34 @@ public class CommonController {
             log.error("文件上传失败", e);  
             return Result.error(MessageConstant.UPLOAD_FAILED);  
         }  
+    }  
+}
+```
+如果使用aliyun的话 还需开发工具类 这里简化流程暂时存储本地 但是会导致数据回显有问题
+
+# 代码开发-新增菜品接口
+
+## `DishController`
+
+```java
+/**  
+ * 菜品管理  
+ */  
+@RestController  
+@RequestMapping("/admin/dish")  
+@Api(tags = "菜品相关接口")  
+@Slf4j  
+public class DishController {  
+  
+    @Autowired  
+    private DishService dishService;  
+  
+    @PostMapping  
+    @ApiOperation("新增菜品")  
+    public Result save(@RequestBody DishDTO dishDTO) {  
+        log.info("新增菜品：{}", dishDTO);  
+        dishService.saveWithFlavor(dishDTO);  
+        return Result.success();  
     }  
 }
 ```
