--- a/JavaNotes/sky-take-out/菜品相关接口开发/新增菜品.md
+++ b/JavaNotes/sky-take-out/菜品相关接口开发/新增菜品.md
@@ -170,3 +170,109 @@ public class DishController {
     }  
 }
 ```
+
+## `DishService`
+
+```java
+public interface DishService {  
+  
+    /**  
+     * 新增菜品，同时保存对应的口味数据  
+     * @param dishDTO  
+     */  
+    public void saveWithFlavor(DishDTO dishDTO);  
+}
+```
+
+## `DishServiceImpl`
+
+```java
+@Service  
+@Slf4j  
+public class DishServiceImpl implements DishService {  
+  
+    @Autowired  
+    private DishMapper dishMapper;  
+  
+    @Autowired  
+    private DishFlavorMapper dishFlavorMapper;  
+  
+    /**  
+     * 新增菜品，同时保存对应的口味数据  
+     * @param dishDTO  
+     */  
+    @Override  
+    @Transactional    
+	public void saveWithFlavor(DishDTO dishDTO) {  
+  
+        Dish dish = new Dish();  
+        BeanUtils.copyProperties(dishDTO, dish);  
+  
+        // 向菜品表插入1条数据  
+        dishMapper.insert(dish);  
+        Long dishId = dish.getId();  
+  
+        List<DishFlavor> flavors = dishDTO.getFlavors();  
+        if (flavors != null && flavors.size() > 0) {  
+            flavors.forEach(dishFlavor -> {  
+                dishFlavor.setDishId(dishId);  
+            });  
+            // 向菜品口味表插入多条数据  
+            dishFlavorMapper.insertBatch(flavors);  
+        }  
+    }
+```
+
+## `DishMapper`
+
+```java
+/**  
+ * 插入菜品  
+ * @param dish  
+ */  
+@AutoFill(value = OperationType.INSERT)  
+void insert(Dish dish);
+```
+
+## `DishMapper.xml`
+
+```xml
+<mapper namespace="com.sky.mapper.DishMapper">  
+  
+    <insert id="insert" useGeneratedKeys="true" keyProperty="id">  
+        insert into dish (name, category_id, price, image, description, create_time, update_time, create_user, update_user, status)  
+            values         
+            (#{name}, #{categoryId}, #{price}, #{image}, #{description}, #{createTime}, #{updateTime}, #{createUser}, #{updateUser}, #{status})    
+    </insert>  
+</mapper>
+```
+
+## `DishFlavorMapper`
+
+```java
+@Mapper  
+public interface DishFlavorMapper {  
+  
+    /**  
+     * 批量插入口味数据  
+     * @param flavors  
+     */  
+    void insertBatch(List<DishFlavor> flavors);  
+}
+```
+
+## `DishFlavorMapper.xml`
+
+```java
+<mapper namespace="com.sky.mapper.DishFlavorMapper">  
+    <insert id="insertBatch">  
+        insert into dish_flavor (dish_id, name, value)  
+        values        
+        <foreach collection="flavors" item="df" separator=",">  
+            (#{df.dishId}, #{df.name}, #{df.value})  
+        </foreach>  
+    </insert>  
+</mapper>
+```
+# 功能测试
+前后端联调 + Swagger接口测试
