vault sync: 2026-01-28 15:17 | mac | 2 files
Affected files:
JavaNotes/sky-take-out/菜品相关接口开发/新增菜品.md
JavaNotes/sky-take-out/菜品相关接口开发/菜品分页查询.md

--- a/JavaNotes/sky-take-out/菜品相关接口开发/新增菜品.md
+++ b/JavaNotes/sky-take-out/菜品相关接口开发/新增菜品.md
@@ -222,7 +222,8 @@ public class DishServiceImpl implements DishService {
         }  
     }
 ```
-
+当前端发送请求时，这道菜还不存在于数据库中，所以它还没有 ID。
+MyBatis ：执行 insert 后，MyBatis 通过`useGeneratedKeys="true"`会自动将数据库生成的主键 ID 回填到 dish 对象中。此时我们拿到了这道新菜唯一的“身份证号”（比如 dishId = 100）。
 ## `DishMapper`
 
 ```java
