vault sync: 2026-01-28 16:05 | mac | 4 files
Affected files:
JavaNotes/sky-take-out/Content.md
JavaNotes/sky-take-out/前置开发/数据库设计文档.md
JavaNotes/sky-take-out/菜品相关接口开发/删除菜品.md
JavaNotes/sky-take-out/菜品相关接口开发/菜品分页查询.md

--- a/JavaNotes/sky-take-out/菜品相关接口开发/菜品分页查询.md
+++ b/JavaNotes/sky-take-out/菜品相关接口开发/菜品分页查询.md
@@ -88,3 +88,74 @@ public class DishVO implements Serializable {
     //private Integer copies;  
 }
 ```
+前端还需要展示菜品所在的分类名称 这需要通过left join查出来 所以不直接返回dish对象 通过DishVO来扩展它
+## `DishController`
+
+```java
+@GetMapping("/page")  
+@ApiOperation("菜品分页查询")  
+public  Result<PageResult> page(DishPageQueryDTO dishPageQueryDTO) {  
+    log.info("菜品分页查询：{}", dishPageQueryDTO);  
+    PageResult pageResult = dishService.pageQuery(dishPageQueryDTO);  
+    return Result.success(pageResult);  
+}
+```
+
+## `DishService`
+
+```java
+/**  
+ * 菜品分页查询  
+ * @param dishPageQueryDTO  
+ * @return  
+ */  
+PageResult pageQuery(DishPageQueryDTO dishPageQueryDTO);
+```
+## `DishServiceImpl`
+
+```java
+/**  
+ * 菜品分页查询  
+ * @param dishPageQueryDTO  
+ * @return  
+ */  
+@Override  
+public PageResult pageQuery(DishPageQueryDTO dishPageQueryDTO) {  
+    PageHelper.startPage(dishPageQueryDTO.getPage(), dishPageQueryDTO.getPageSize());  
+    Page<DishVO> page = dishMapper.pageQuery(dishPageQueryDTO);  
+    return new PageResult(page.getTotal(), page.getResult());  
+}
+```
+## `DishMapper`
+
+```java
+/**  
+ * 菜品分页查询  
+ * @param dishPageQueryDTO  
+ * @return  
+ */  
+Page<DishVO> pageQuery(DishPageQueryDTO dishPageQueryDTO);
+```
+
+## `DishMapper.xml`
+
+```java
+<select id="pageQuery" resultType="com.sky.vo.DishVO">  
+    select d.* , c.name as categoryName  
+    from dish d    left outer join category c on d.category_id = c.id    <where>  
+        <if test="name != null">  
+            and d.name like concat('%', #{name}, '%')  
+        </if>  
+        <if test="categoryId != null">  
+            and d.category_id = #{categoryId}  
+        </if>  
+        <if test="status != null">  
+            and d.status = #{status}  
+        </if>  
+    </where>  
+    order by d.create_time desc  
+</select>
+```
+# 功能测试
+
+前后端联调 + Swagger后端接口测试
