vault sync: 2026-01-28 17:30 | mac | 1 files
Affected files:
JavaNotes/sky-take-out/菜品相关接口开发/删除菜品.md

--- a/JavaNotes/sky-take-out/菜品相关接口开发/删除菜品.md
+++ b/JavaNotes/sky-take-out/菜品相关接口开发/删除菜品.md
@@ -26,3 +26,14 @@
 
 操作涉及的表： [[数据库设计文档#^0b4642|dish表]] 和 [[数据库设计文档#^a4b087||dish_flavor表]]和 [[数据库设计文档#^3cc3c6|setmeal_dish表]]
 # 代码开发
+## `DishController`
+
+```java
+@DeleteMapping  
+@ApiOperation("菜品批量删除")  
+public Result delete(@RequestParam List<Long> ids) {  
+    log.info("菜品批量删除：{}", ids);  
+    dishService.deleteBatch(ids);  
+    return Result.success();  
+}
+```
