vault sync: 2026-01-28 18:07 | mac | 1 files
Affected files:
JavaNotes/sky-take-out/菜品相关接口开发/删除菜品.md

--- a/JavaNotes/sky-take-out/菜品相关接口开发/删除菜品.md
+++ b/JavaNotes/sky-take-out/菜品相关接口开发/删除菜品.md
@@ -37,3 +37,115 @@ public Result delete(@RequestParam List<Long> ids) {
     return Result.success();  
 }
 ```
+
+## `DishService`
+
+```java
+/**  
+ * 菜品批量删除  
+ * @param ids  
+ */  
+void deleteBatch(List<Long> ids);
+```
+
+## `DishServiceImpl`
+
+```java
+/**  
+ * 菜品批量删除  
+ * @param ids  
+ */  
+@Override  
+@Transactional  
+public void deleteBatch(List<Long> ids) {  
+    // 判断当前菜品是否能够删除 --是否存在起售中的菜品  
+    for (Long id : ids) {  
+        Dish dish = dishMapper.getById(id);  
+        if (dish.getStatus() == StatusConstant.ENABLE) {  
+            // 当前菜品处于起售中 不能删除  
+            throw new DeletionNotAllowedException(MessageConstant.DISH_ON_SALE);  
+        }  
+    }  
+  
+    // 判断当前菜品是否能够删除 --是否关联了套餐  
+    List<Long> setmealIds = setmealDishMapper.getSetmealIdByDishIds(ids);  
+    if (setmealIds != null && setmealIds.size() > 0) {  
+        // 当前菜品关联了套餐 不能删除  
+        throw new DeletionNotAllowedException(MessageConstant.DISH_BE_RELATED_BY_SETMEAL);  
+    }  
+  
+    // 删除菜品表中的菜品数据  
+    for (Long id : ids) {  
+        dishMapper.deletById(id);  
+        // 删除菜品关联的口味数据  
+        dishFlavorMapper.deleteByDishId(id);  
+    }  
+}
+```
+
+## `DishMapper`
+
+```java
+/**  
+ * 根据id查询菜品  
+ * @param id  
+ * @return  
+ */  
+@Select("select * from dish where id = #{id}")  
+Dish getById(Long id);  
+  
+/**  
+ * 根据id删除菜品  
+ * @param id  
+ */  
+@Delete("delete from dish where id = #{id}")  
+void deletById(Long id);
+```
+## `SetmealDishMapper`
+
+```java
+@Mapper  
+public interface SetmealDishMapper {  
+  
+    /**  
+     * 根据菜品ids查询对应的套餐id集合  
+     * @param dishIds  
+     * @return  
+     */  
+    // select setmeal id from setmeal_dish where dish_id in (1,2,3);  
+    List<Long> getSetmealIdByDishIds(List<Long> dishIds);  
+}
+```
+
+## `SetmealDishMapper.xml`
+
+```xml
+<mapper namespace="com.sky.mapper.SetmealDishMapper">  
+    <select id="getSetmealIdByDishIds" resultType="java.lang.Long">  
+        SELECT DISTINCT setmeal_id  
+        FROM setmeal_dish        
+        WHERE dish_id IN        
+        <foreach item="dishId" collection="dishIds" open="(" separator="," close=")">  
+            #{dishId}  
+        </foreach>  
+    </select>  
+</mapper>
+```
+
+## `DishFlavorMapper`
+
+```java
+/**  
+ * 根据菜品id删除对应的口味数据  
+ * @param dishId  
+ */  
+@Delete("delete from dish_flavor where dish_id = #{dishId}")  
+void deleteByDishId(Long dishId);
+```
+# 功能测试
+ 
+ 前后端联调 + Swagger 测试
+# 代码优化
+
+之前使用for循环
+ 
