vault sync: 2026-01-28 18:15 | mac | 1 files
Affected files:
JavaNotes/sky-take-out/菜品相关接口开发/删除菜品.md

--- a/JavaNotes/sky-take-out/菜品相关接口开发/删除菜品.md
+++ b/JavaNotes/sky-take-out/菜品相关接口开发/删除菜品.md
@@ -148,4 +148,44 @@ void deleteByDishId(Long dishId);
 # 代码优化
 
 之前使用for循环
- 
+```java
+    // 删除菜品表中的菜品数据  
+    for (Long id : ids) {  
+        dishMapper.deletById(id);  
+        // 删除菜品关联的口味数据  
+        dishFlavorMapper.deleteByDishId(id);  
+    }  
+```
+在高并发场景下 性能可能受限
+
+## `DishController`
+
+```java
+// 根据菜品id集合批量删除菜品数据  
+dishMapper.deleteByIds(ids);  
+  
+// 根据菜品id集合批量删除口味数据  
+dishFlavorMapper.deleteByDishIds(ids);
+```
+
+## `DishFlavorMapper`
+
+```java
+/**  
+ * 根据菜品ids批量删除对应的口味数据  
+ * @param ids  
+ */  
+void deleteByDishIds(List<Long> ids);
+```
+
+## `DishFlavorMapper.xml`
+
+```java
+<delete id="deleteByDishIds">  
+    delete from dish_flavor  
+    where dish_id in    
+    <foreach item="dishId" collection="dishIds" open="(" separator="," close=")">  
+        #{dishId}  
+    </foreach>  
+</delete>
+```
