vault sync: 2026-01-28 18:24 | mac | 1 files
Affected files:
JavaNotes/sky-take-out/菜品相关接口开发/删除菜品.md

--- a/JavaNotes/sky-take-out/菜品相关接口开发/删除菜品.md
+++ b/JavaNotes/sky-take-out/菜品相关接口开发/删除菜品.md
@@ -156,7 +156,7 @@ void deleteByDishId(Long dishId);
         dishFlavorMapper.deleteByDishId(id);  
     }  
 ```
-在高并发场景下 性能可能受限
+在高并发场景下 性能可能受限 优化采用直接传入数组 list 
 
 ## `DishController`
 
@@ -186,6 +186,29 @@ void deleteByDishIds(List<Long> ids);
     where dish_id in    
     <foreach item="dishId" collection="dishIds" open="(" separator="," close=")">  
         #{dishId}  
+    </foreach>  
+</delete>
+```
+
+## `DishMapper`
+
+```java
+/**  
+ * 根据ids批量删除菜品  
+ * @param ids  
+ */  
+//sql: delete from dish where id in (1,2,3);  
+void deleteByIds(List<Long> ids);
+```
+
+## `DishMapper.xml`
+
+```xml
+<delete id="deleteByIds">  
+    delete from dish  
+    where id in    
+    <foreach item="id" collection="ids" open="(" separator="," close=")">  
+        #{id}  
     </foreach>  
 </delete>
 ```
