vault sync: 2026-01-30 11:01 | mac | 2 files
Affected files:
JavaNotes/sky-take-out/菜品相关接口开发/修改菜品.md
JavaNotes/sky-take-out/菜品相关接口开发/删除菜品.md

--- a/JavaNotes/sky-take-out/菜品相关接口开发/修改菜品.md
+++ b/JavaNotes/sky-take-out/菜品相关接口开发/修改菜品.md
@@ -65,4 +65,58 @@
 | code | integer | 必须   |     |     | format：int32 |
 | data | string  | 非必须  |     |     |              |
 | msg  | string  | 非必须  |     |     |              |
-# 代码开发
+# 代码开发-根据id查询菜品
+## `DishController`
+
+```java
+@GetMapping("/{id}")  
+@ApiOperation("根据id查询菜品及其口味信息")  
+public Result<DishVO> getById(@PathVariable Long id) {  
+    log.info("根据id查询菜品及其口味信息：{}", id);  
+    DishVO dishVO = dishService.getByIdWithFlavor(id);  
+    return Result.success(dishVO);  
+}
+```
+## `DishService`
+
+```java
+/**  
+ * 根据id查询菜品及其口味信息  
+ * @param id  
+ * @return  
+ */  
+DishVO getByIdWithFlavor(Long id);
+```
+## `DishServiceImpl`
+
+```java
+@Override  
+public DishVO getByIdWithFlavor(Long id) {  
+    // 根据id查询菜品基本信息  
+    Dish dish = dishMapper.getById(id);  
+  
+    // 根据dishId查询对应的口味信息  
+    List<DishFlavor> dishFlavors = dishFlavorMapper.getByDishId(id);  
+  
+    // 封装成DishVO对象并返回  
+    DishVO dishVO = new DishVO();  
+    BeanUtils.copyProperties(dish, dishVO);  
+    dishVO.setFlavors(dishFlavors);  
+  
+    return dishVO;  
+}
+```
+## `DishFlavorMapper`
+
+```java
+/**  
+ * 根据菜品id查询对应的口味数据  
+ * @param dishId  
+ * @return  
+ */  
+@Select("select * from dish_flavor where dish_id = #{dishId}")  
+List<DishFlavor> getByDishId(Long dishId);
+```
+## `DishMapper`
+
+[[删除菜品#^f98ec3| getById]]
