vault sync: 2026-01-30 11:26 | mac | 2 files
Affected files:
JavaNotes/sky-take-out/Content.md
JavaNotes/sky-take-out/菜品相关接口开发/修改菜品.md

--- a/JavaNotes/sky-take-out/菜品相关接口开发/修改菜品.md
+++ b/JavaNotes/sky-take-out/菜品相关接口开发/修改菜品.md
@@ -120,3 +120,86 @@ List<DishFlavor> getByDishId(Long dishId);
 ## `DishMapper`
 
 [[删除菜品#^f98ec3| getById]]
+
+# 代码开发-修改菜品
+## `DishController`
+
+```java
+@PutMapping  
+@ApiOperation("修改菜品")  
+public Result update(@RequestBody DishDTO dishDTO) {  
+    log.info("修改菜品：{}", dishDTO);  
+    dishService.updateWithFlavor(dishDTO);  
+    return Result.success();  
+}
+```
+
+## `DishService`
+
+```java
+/**  
+ * 根据id修改菜品基本信息，同时更新对应的口味数据  
+ * @param dishDTO  
+ */  
+void updateWithFlavor(DishDTO dishDTO);
+```
+## `DishServiceImpl`
+
+```java
+/**  
+ * 根据id修改菜品基本信息，同时更新对应的口味数据  
+ * @param dishDTO  
+ */  
+@Override  
+public void updateWithFlavor(DishDTO dishDTO) {  
+    // 修改菜品表基本信息  
+    Dish dish = new Dish();  
+    BeanUtils.copyProperties(dishDTO, dish);  
+  
+    dishMapper.update(dish);  
+  
+    // 删除原有的口味数据  
+    dishFlavorMapper.deleteByDishId(dishDTO.getId());  
+  
+    // 重新插入口味数据  
+    List<DishFlavor> flavors = dishDTO.getFlavors();  
+    if (flavors != null && flavors.size() > 0) {  
+        flavors.forEach(dishFlavor -> {  
+            dishFlavor.setDishId(dishDTO.getId());  
+        });  
+        // 向菜品口味表插入多条数据  
+        dishFlavorMapper.insertBatch(flavors);  
+    }  
+}
+```
+
+## `DishMapper`
+
+```java
+/**  
+ * 更新菜品信息  
+ * @param dish  
+ */  
+@AutoFill(value = OperationType.UPDATE)  
+void update(Dish dish);
+```
+
+## `DishMapper.xml`
+
+```java
+<update id="update">  
+    update dish  
+    <set>  
+        <if test="name != null">name = #{name},</if>  
+        <if test="categoryId != null">category_id = #{categoryId},</if>  
+        <if test="price != null">price = #{price},</if>  
+        <if test="image != null">image = #{image},</if>  
+        <if test="description != null">description = #{description},</if>  
+        <if test="updateTime != null">update_time = #{updateTime},</if>  
+        <if test="updateUser != null">update_user = #{updateUser},</if>  
+        <if test="status != null">status = #{status},</if>  
+    </set>  
+    where id = #{id}  
+</update>
+```
+写动态SQL 使用set标签
