vault sync: 2026-01-30 20:58 | mac | 1 files
Affected files:
JavaNotes/sky-take-out/店铺营业状态设置相关接口开发/店铺营业状态设置.md

--- a/JavaNotes/sky-take-out/店铺营业状态设置相关接口开发/店铺营业状态设置.md
+++ b/JavaNotes/sky-take-out/店铺营业状态设置相关接口开发/店铺营业状态设置.md
@@ -52,4 +52,84 @@
 | data | string  | 必须   |     |     | 店铺营业状态：1为营业 0为打烊 |
 | msg  | string  | 非必须  |     |     |                  |
 # 代码开发
+## `ShopController`
 
+```java
+@RestController("adminShopController")  
+@RequestMapping("/admin/shop")  
+@Api(tags = "店铺相关接口")  
+@Slf4j  
+public class ShopController {  
+  
+    public static final String KEY = "SHOP_STATUS";  
+  
+    @Autowired  
+    private RedisTemplate redisTemplate;  
+  
+    @PutMapping("/{status}")  
+    @ApiOperation("设置商铺状态")  
+    public Result setStatus(@PathVariable Integer status) {  
+        log.info("设置商铺状态: {}", status == 1 ? "营业中" : "打烊中");  
+        redisTemplate.opsForValue().set("SHOP_STATUS", status);  
+        return Result.success();  
+    }  
+  
+    @GetMapping("/status")  
+    @ApiOperation("获取商铺状态")  
+    public Result<Integer> getStatus() {  
+        Integer status = (Integer) redisTemplate.opsForValue().get(KEY);  
+        log.info("获取商铺状态为:{}", status == 1 ? "营业中" : "打烊中");  
+        return Result.success(status);  
+    }  
+  
+}
+```
+
+# 代码优化
+## `WebMVCConfiguration`
+
+```java
+/**  
+ * 通过knife4j生成接口文档  
+ * @return  
+ */  
+@Bean  
+public Docket docket1() {  
+    ApiInfo apiInfo = new ApiInfoBuilder()  
+            .title("苍穹外卖项目接口文档")  
+            .version("2.0")  
+            .description("苍穹外卖项目接口文档")  
+            .build();  
+    Docket docket = new Docket(DocumentationType.SWAGGER_2)  
+            .groupName("管理端接口")  
+            .apiInfo(apiInfo)  
+            .select()  
+            .apis(RequestHandlerSelectors.basePackage("com.sky.controller.admin"))  
+            .paths(PathSelectors.any())  
+            .build();  
+    return docket;  
+}  
+  
+/**  
+ * 通过knife4j生成接口文档  
+ * @return  
+ */  
+@Bean  
+public Docket docket2() {  
+    ApiInfo apiInfo = new ApiInfoBuilder()  
+            .title("苍穹外卖项目接口文档")  
+            .version("2.0")  
+            .description("苍穹外卖项目接口文档")  
+            .build();  
+    Docket docket = new Docket(DocumentationType.SWAGGER_2)  
+            .groupName("用户端接口")  
+            .apiInfo(apiInfo)  
+            .select()  
+            .apis(RequestHandlerSelectors.basePackage("com.sky.controller.user"))  
+            .paths(PathSelectors.any())  
+            .build();  
+    return docket;  
+}
+```
+
+在Swagger中分开扫描 变成两个不同的测试组
