vault sync: 2026-02-02 11:54 | mac | 2 files
Affected files:
JavaNotes/sky-take-out/前置开发/数据库设计文档.md
JavaNotes/sky-take-out/微信登录相关接口开发/微信登录功能.md

--- a/JavaNotes/sky-take-out/微信登录相关接口开发/微信登录功能.md
+++ b/JavaNotes/sky-take-out/微信登录相关接口开发/微信登录功能.md
@@ -3,3 +3,31 @@
 业务规则
 - 基于微信登录实现小程序（用户端）的登录功能
 - 如果是新用户需要自动完成注册
+## 接口设计
+- 基本信息
+	- Path:/user/user/login
+	- Method:POST
+- 请求参数
+	Headers
+
+| 参数名称         | 参数值              | 是否必须 | 示例  | 备注  |
+| ------------ | ---------------- | ---- | --- | --- |
+| Content-Type | application/json | 是    |     |     |
+	Body
+	
+| 名称   | 类型     | 是否必须 | 默认值 | 备注      | 其他信息 |
+| ---- | ------ | ---- | --- | ------- | ---- |
+| code | string | 必须   |     | 微信用户授权码 |      |
+- 返回数据
+
+| 名称        | 类型      | 是否必须 | 默认值 | 备注       | 其他信息         |
+| --------- | ------- | ---- | --- | -------- | ------------ |
+| code      | integer | 必须   |     |          | format：int32 |
+| data      | object  | 必须   |     |          |              |
+| ├─ id     | integer | 必须   |     | 用户id     | format：int64 |
+| ├─ openid | string  | 必须   |     | 微信openid |              |
+| ├─ token  | string  | 必须   |     | jwt令牌    |              |
+| msg       | string  | 非必须  |     |          |              |
+# 数据库设计
+[[数据库设计文档#^72b20a|user表]]
+# 代码开发
