--- a/JavaNotes/sky-take-out/微信登录相关接口开发/微信登录功能.md
+++ b/JavaNotes/sky-take-out/微信登录相关接口开发/微信登录功能.md
@@ -31,3 +31,42 @@
 # 数据库设计
 [[数据库设计文档#^72b20a|user表]]
 # 代码开发
+
+# `UserController`
+
+```java
+@RestController  
+@RequestMapping("/user/user")  
+@Api(tags = "C端用户信息相关接口")  
+@Slf4j  
+public class UserController {  
+  
+    @Autowired  
+    private UserService userService;  
+  
+    @Autowired  
+    private JwtProperties jwtProperties;  
+  
+    @PostMapping("/login")  
+    @ApiOperation("微信登录")  
+    public Result<UserLoginVO> login(@RequestBody UserLoginDTO userLoginDTO) {  
+        log.info("微信登录，userLoginDTO：{}", userLoginDTO.getCode());  
+  
+        // 调用service层微信登录方法  
+        User user = userService.wxLogin(userLoginDTO);  
+  
+        // 为微信用户生成token，返回给前端  
+        Map<String, Object> claims = new HashMap<>();  
+        claims.put(JwtClaimsConstant.USER_ID, user.getId());  
+        String token = JwtUtil.createJWT(jwtProperties.getUserSecretKey(), jwtProperties.getUserTtl(), claims);  
+  
+        UserLoginVO userLoginVO = UserLoginVO.builder()  
+                .id(user.getId())  
+                .openid(user.getOpenid())  
+                .token(token)  
+                .build();  
+        return Result.success(userLoginVO);  
+  
+    }  
+}
+```
